--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
-    font-family: sans-serif !important;
-  }
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
+
 html {
   scroll-behavior: smooth;
 }
