--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,27 @@
 html {
   scroll-behavior: smooth;
 }
+
+/* Style the scrollbar itself */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px; 
+}
+
+/* Style the scrollbar track (the background area) */
+::-webkit-scrollbar-track {
+  background: white;
+  border-radius: 10px;
+}
+
+/* Style the scrollbar thumb (the draggable part) */
+::-webkit-scrollbar-thumb {
+  background: #96968a;
+  border-radius: 10px;
+}
+
+/* Style the scrollbar when hovered */
+::-webkit-scrollbar-thumb:hover {
+  background: #c2c2b3;
+  cursor: pointer;
+}
